compiler/tests/ar/errors/ternary_mismatch.salam
// لغة: العربية
// توقع: E021
دالة الرئيسية:
    ص := صواب ؟ 2 : "س"
    اطبع ص
نهاية
